# portmidi

./: .gitattributes  .gitignore  CHANGELOG.txt  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  README.txt  portmidi.pc.in
.github/workflows/: build.yml  docs.yml
bindings/java/: CMakeLists.txt
docs/: annotated.html  annotated_dup.js  classes.html  dir_05132f9aea6e2a794393f5fa77d948ee.html  dir_05132f9aea6e2a794393f5fa77d948ee.js  dir_1d839fcc88dfd3e1e4676931eb36f2b4.html  dir_1d839fcc88dfd3e1e4676931eb36f2b4.js  dir_28c62fec18048a17be900e4356d42f5e.html  dir_3866c8f216f81b252223a03e923cedf8.html  dir_cc29351c8d962ec8e2ee530806424731.html  dir_ded2072a22a771178971ff408a022519.html  dir_ded2072a22a771178971ff408a022519.js  dir_ffccb34463a362d08daa5624fb7bac73.html  files.html  files_dup.js  finddefault_8h_source.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  group__grp__basics.html  group__grp__basics.js  group__grp__device.html  group__grp__device.js  group__grp__events__filters.html  group__grp__events__filters.js  group__grp__io.html  group__grp__io.js  group__grp__pmutil.html  group__grp__pmutil.js  group__grp__porttime.html  group__grp__porttime.js  index.html  menudata.js  modules.html  modules.js  navtreedata.js  navtreeindex0.js  (+22 more)
docs/search/: all_0.js  all_6.js  classes_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  groups_1.js  groups_3.js  groups_4.js  groups_5.js  searchdata.js  typedefs_0.js  variables_0.js
include/: portmidi.h
packaging/: PortMidiConfig.cmake.in  portmidi.pc.in
pm_common/: CMakeLists.txt  pminternal.h  pmutil.c  pmutil.h  portmidi.c  portmidi.h
pm_haiku/: pmhaiku.cpp
pm_java/: CMakeLists.txt  README.txt  make.bat
pm_java/pmdefaults/: pmdefaults  pmdefaults-license.txt
pm_linux/: pmlinux.c  pmlinux.h  pmlinuxalsa.c  pmlinuxalsa.h  pmlinuxnull.h
pm_mac/: Makefile.osx  README_MAC.txt  pmmac.c  pmmacosxcm.c  pmmacosxcm.h  readbinaryplist.c
pm_sndio/: pmsndio.c
pm_test/: CMakeLists.txt  README.txt  fast.c  fastrcv.c  latency.c  midiclock.c  midithru.c  mm.c  multivirtual.c  recvvirtual.c  sendvirtual.c  sysex.c  testio.c
pm_win/: README_WIN.txt  pmwin.c  pmwinmm.c  pmwinmm.h  static.cmake
portmidi/trunk/: ALL_BUILD.vcproj  CHANGELOG.txt  CMakeLists.txt  README.txt  ZERO_CHECK.vcproj  cmake_install.cmake  license.txt  portmidi-VC8.sln  portmidi-VC9.sln  portmidi.dsp  portmidi.sln  portmidi.vcproj
portmidi/trunk/doc/html/: annotated.html  dir_061a5072588a675329ce248f2395ca0d.html  dir_2e663ebe02a3dfae6212f5f07f1c9567.html  dir_2fa585a6ea0602f13d4fcce2d20b7770.html  dir_459678b1f61f3d438787814fadc318e0.html  dir_5cda6520294d0fc245f6723b02fff487.html  dir_651ccd9815f50c019ae756953e2189e3.html  dir_6a073d9224080e8ecd085ea09053f867.html  dir_8f277512f9c812afeb54c5ff027e9426.html  dir_a2828c9ceb283dbf92c4fa2d564ed07c.html  dir_c672ae20ac4445e1acb9a1308d33f18b.html  dir_dc3266736cc2f0d2ca229b59b20ae536.html  dir_ded2072a22a771178971ff408a022519.html  dir_ded2072a22a771178971ff408a022519.js  files_dup.js  functions_vars.html  group__grp__device.html  group__grp__events__filters.js  navtreedata.js  navtreeindex0.js  pminternal_8h_source.html  pmutil_8h_source.html  portmidi_8h_source.html  struct_pm_device_info.js
portmidi/trunk/doc/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  classes_1.js  searchdata.js
portmidi/trunk/pm_cl/: README_CL.txt  cffi-portmidi.lisp  test-no-cm.lisp
portmidi/trunk/pm_common/: CMakeLists.txt  pminternal.h  pmjni.vcproj  pmutil.c  pmutil.h  portmidi-dynamic.vcproj  portmidi-static.vcproj  portmidi.c  portmidi.h
portmidi/trunk/pm_dylib/: CMakeLists.txt
portmidi/trunk/pm_java/: CMakeLists.txt  README.txt  make-VC9.bat  make.bat  pmdefaults-setup-script.iss
portmidi/trunk/pm_java/jportmidi/: JPortMidiApi.java
portmidi/trunk/pm_java/pmdefaults/: PmDefaultsFrame.java
portmidi/trunk/pm_java/pmjni/: jportmidi_JportMidiApi.h  pmjni-VC9.vcproj  pmjni.c  pmjni.vcproj
portmidi/trunk/pm_linux/: Makefile  README_LINUX.txt  pmlinux.c  pmlinuxalsa.c
portmidi/trunk/pm_mac/: Makefile.osx  README_MAC.txt  clean_up_project.awk  clean_up_project.sh  pmmac.c  pmmacosxcm.c  readbinaryplist.c  readbinaryplist.h
portmidi/trunk/pm_mac/pm_mac.pbproj/: project.pbxproj
portmidi/trunk/pm_mac/pm_mac.xcodeproj/: project.pbxproj
portmidi/trunk/pm_mingw/msys/: README.txt
portmidi/trunk/pm_python/: README.txt  README26.txt  README31.txt  README_PYTHON.txt  build26.sh  build31.bat  hints.txt  miniTest.py  pypm.c  pypm.py  pypm.pyx  pypmbase.c  pypmbase.i  setup.py  test.py  test31.py
portmidi/trunk/pm_python/macpypm/macpypm.xcodeproj/: project.pbxproj
portmidi/trunk/pm_python/scripts-2.6/: README.TXT
portmidi/trunk/pm_test/: CMakeLists.txt  README.txt  fast.c  fastrcv.c  latency.c  latency.vcproj  midiclock.c  midiclock.vcproj  midithread.c  midithread.vcproj  midithru.c  midithru.vcproj  mm.c  mm.vcproj  qtest-VC8.vcproj  qtest-VC9.vcproj  qtest.c  qtest.vcproj  recvvirtual.c  sendvirtual.c  sysex.c  sysex.vcproj  test-VC8.vcproj  test.c  test.vcproj  testio.c
portmidi/trunk/pm_win/: README_WIN.txt  clean_up_vcproj.awk  clean_up_vcproj.bat  copy-dll.bat  pm_dll.vcproj  pmwin.c  pmwinmm.c  static.cmake
portmidi/trunk/portmidi.xcodeproj/: project.pbxproj
portmidi/trunk/porttime/: porttime.h  porttime.vcproj  ptlinux.c  ptmacosx_cf.c  ptmacosx_mach.c  ptwinmm.c
portsmf/trunk/: Makefile.am  Makefile.in  README.txt  algrd_internal.h  algsmfrd_internal.h  allegro.cpp  allegro.h  allegro.htm  allegro.vcproj  allegro3.sln  allegrord.cpp  allegrosmfrd.cpp  allegrosmfwr.cpp  allegrowr.cpp  configure  configure.ac  mfmidi.cpp  mfmidi.h  notes.txt  portsmf.sln  strparse.cpp  strparse.h  todo.txt  trace.cpp
porttime/: porttime.h  ptlinux.c  ptmacosx.h  ptmacosx_cf.c  ptmacosx_mach.c
scorealign/: Makefile.osx  comp_chroma.h  gen_chroma.cpp  score-align.vcproj  scorealign.cpp
scorealign/snd/: audio.c  snd.c  (+24 more)
test/: CMakeLists.txt  fastrcv.c  mm.c  sysex.c  virttest.c
trunk/: mfmidi.h  scorealign.h
(+67 files in other folders)
