macro(add_test name)
  add_executable(${name} ${name}.c)
  target_link_libraries(${name} PRIVATE PortMidi)
endmacro(add_test)

add_test(fast)
add_test(fastrcv)
add_test(latency)
add_test(midiclock)
add_test(midithread)
add_test(midithru)
add_test(mm)
add_test(multivirtual)
add_test(qtest)
add_test(recvvirtual)
add_test(sendvirtual)
add_test(sysex)
add_test(testio)
